--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
-    background-color: rgb(100，34，34);
-    color: rgb(0,0,0);
+    background-color: rgb(235，234，33);
+    color: rgb(231，234，123);
     font-family: "Open Sans", sans-serif;
     text-align: center;
 }
